prevent width overflow on lyrics container (#1106)

--- a/src/renderer/features/lyrics/lyrics.module.css
+++ b/src/renderer/features/lyrics/lyrics.module.css
@@ -25,6 +25,8 @@
     display: flex;
     width: 100%;
     height: 100%;
+    min-width: 0;
+    overflow: hidden;
 
     &:hover {
         .actions-container {
